--- a/login.html
+++ b/login.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Login of User</title>
+  </head>
+  <body>
+      <div>
+        <label for="email">Email</label><br>
+        <input type="text" id="email" value=""><br>
+        <label for="password">Password</label><br>
+        <input type="text" id="password" value=""><br><br>
+        <button type="button" id="sendUserData">Login</button>
+      </div>
+  </body>
+</html>
