Implementación básica de main y logout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Wall User</title>
   </head>
-  <body>
+  <body onload="login.html">
     <section id="publication">
       <div>
         <textarea rows="8" cols="80" id="status"></textarea>
