--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         <input type="text" id="email" value=""><br>
         <label for="password">Password</label><br>
         <input type="text" id="password" value=""><br><br>
-        <button type="button" id="sendUserData">Login</button>
+        <button type="button" id="login">Login</button>
       </div>
   </body>
 </html>
