--- a/login.html
+++ b/login.html
@@ -8,9 +8,13 @@
       <div>
         <label for="email">Email</label><br>
         <input type="text" id="email" value=""><br>
+        <span class="warning" style="color: red;"></span><br>
         <label for="password">Password</label><br>
-        <input type="text" id="password" value=""><br><br>
+        <input type="password" id="password" value=""><br>
+        <span class="warning" style="color: red;"></span><br><br>
         <button type="button" id="login">Login</button>
       </div>
+      <script type="text/javascript" src="assets/js/main.js"></script>
+      <script type="text/javascript" src="assets/js/login.js"></script>
   </body>
 </html>
